# dirigo-ni-frame-grabber

./: README.md  pyproject.toml
dirigo_ni_frame_grabber/: __init__.py  dirigo_ni_frame_grabber.py
tests/: test_hw.py
