[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_ni_frame_grabber"
version = "0.1.2"
description = "Plugin to use NI frame grabbers with Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = [
    "dirigo",
    "imaqbindings"
]

# deprecated
[project.entry-points."dirigo_frame_grabbers"]
ni_frame_grabber = "dirigo_ni_frame_grabber:NIFrameGrabber"

# new format
[project.entry-points."dirigo.devices.frame_grabber"]
ni = "dirigo_ni_frame_grabber:NIFrameGrabber"
